updating file for testing2

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git</title>
+    <h2>Testing success</h2>
+    <h3>now we are working on git</h3>
   </head>
   <body>
-    <h1>All is well</h1>
+    <h1></h1>
   </body>
 </html>
