--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git</title>
-    <h2>Testing success</h2>
-    <h3>now we are working on git</h3>
   </head>
   <body>
-    <h1></h1>
+    <h1>git testing</h1>
+    <h2>Testing success</h2>
+    <h3>now we are working on git</h3>
   </body>
 </html>
